fixed colorpicker alignment and padding

--- a/src/scss/groups.scss
+++ b/src/scss/groups.scss
@@ -34,6 +34,10 @@
       justify-content: center;
       align-items: center;
     }
+    &.colorpicker{
+      align-items: center;
+      justify-content: center;
+    }
 
     .gradient {
       flex: 0 0 auto;
@@ -90,6 +94,10 @@
       padding-top: 10px;
     }
 
+    .show{
+      padding: 20px;
+    }
+
     .expandbtn {
       text-align: center;
       font-size: 20px;
@@ -113,26 +121,7 @@
       padding: 5px;
     }
 
-    .colorWheel {
-      margin: 20px auto;
-      width: 300px;
-      height: 300px;
-      border-radius: 50%;
-      background: conic-gradient(
-        from 90deg,
-        rgba(255, 0, 0, 1) 0%,
-        rgba(255, 154, 0, 1) 10%,
-        rgba(208, 222, 33, 1) 20%,
-        rgba(79, 220, 74, 1) 30%,
-        rgba(63, 218, 216, 1) 40%,
-        rgba(47, 201, 226, 1) 50%,
-        rgba(28, 127, 238, 1) 60%,
-        rgba(95, 21, 242, 1) 70%,
-        rgba(186, 12, 248, 1) 80%,
-        rgba(251, 7, 217, 1) 90%,
-        rgba(255, 0, 0, 1) 100%
-      );
-    }
+    
 
     
 
